<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <FrameLayout
        android:id="@+id/topFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountTab"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/accountImage"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"/>

    </FrameLayout>

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/editacc"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/uname"
        app:layout_constraintTop_toBottomOf="@id/accountdetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:id="@+id/fullNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:id="@+id/birthdateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate"
        app:layout_constraintTop_toBottomOf="@id/fullNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:inputType="date"
        android:importantForAutofill="no" />

    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:id="@+id/addressInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/addresssHome"
        app:layout_constraintTop_toBottomOf="@id/birthdateInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:inputType="textAutoComplete"
        android:autofillHints="postalAddress"/>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChangeButton"
        app:layout_constraintTop_toBottomOf="@id/addressInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/white"/>

    <View
        android:id="@+id/separator"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/saveChangesButton"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoutButton"
        app:layout_constraintTop_toBottomOf="@id/saveChangesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/accountdetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountdesc"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@id/topFrame"/>

    <ImageView
        android:id="@+id/accountImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/personred"
        app:layout_constraintTop_toBottomOf="@id/logoutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="40dp"

        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profPic" />


</androidx.constraintlayout.widget.ConstraintLayout>